--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "main": "./extension.js",
   "contributes": {
     "commands": [{
-      "command": "groups-for-code.helloWorld",
-      "title": "Hello World"
+      "command": "groups-for-code.addToGroup",
+      "title": "Add active tab to group"
     }]
   },
   "scripts": {
