--- a/package.json
+++ b/package.json
@@ -12,19 +12,28 @@
   "activationEvents": [],
   "main": "./src/extension.js",
   "contributes": {
-    "commands": [{
-      "command": "groups-for-code.addToGroup",
-      "title": "Add active tab to group"
-    },
-    {
-      "command" : "groups-for-code.showGroups",
-      "title" : "Show groups"
-    },
-    {
-      "command": "groups-for-code.resetGroups",
-      "title": "Reset groups"
+    "commands": [
+      {
+        "command": "groups-for-code.addToGroup",
+        "title": "Add active tab to group"
+      },
+      {
+        "command": "groups-for-code.showGroups",
+        "title": "Show groups"
+      },
+      {
+        "command": "groups-for-code.resetGroups",
+        "title": "Reset groups"
+      }
+    ],
+    "views": {
+      "explorer"  : [
+        {
+          "id": "groups-for-code.activeGroups",
+          "name": "Groups"
+        }
+      ]
     }
-  ]
   },
   "scripts": {
     "lint": "eslint .",
