conversion to tabs object

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "title": "Delete Group"
       },
       {
-        "command": "groups-for-code.addToGroup",
+        "command": "groups-for-code.addActiveToGroup",
         "title": "Add active tab to group"
       },
       {
