--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "publisher": "Omatita",
   "displayName": "groups for code",
   "description": "groups tabs in visual studio code",
-  "version": "0.0.3",
+  "version": "0.1.1",
   "icon": "./logo-dark-groups.png",
   "repository": {
     "type": "git",
@@ -102,12 +102,16 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.85.0",
     "@types/mocha": "^10.0.6",
     "@types/node": "18.x",
+    "@types/vscode": "^1.85.0",
+    "@vscode/test-cli": "^0.0.4",
+    "@vscode/test-electron": "^2.3.8",
     "eslint": "^8.56.0",
     "typescript": "^5.3.3",
-    "@vscode/test-cli": "^0.0.4",
-    "@vscode/test-electron": "^2.3.8"
+    "vscode": "^1.1.37"
+  },
+  "dependencies": {
+    "vsce": "^2.15.0"
   }
 }
